syntax = "proto3";
package kv;

service KeyValue {
    rpc Put (PutRequest) returns (PutResponse);
    rpc Get (GetRequest) returns (GetResponse);
}

message PutRequest {
    string key = 1;
    string value = 2;
    int32 version = 3;
}

message PutResponse {
    bool success = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
    bool found = 2;
}